# highnoon

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml
drafts/: linkedin-announce-final.md  linkedin-announce-v1.md  linkedin-announce-v2.md  linkedin-announce-v3.md  linkedin-announce-v4.md
src/highnoon/: __init__.py  __main__.py  assess.py  cli.py  mcp.py
