[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "highnoon"
version = "0.1.0"
description = "Teleological Hedonic Optimization — a purpose classification framework for software and human activity"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AltPath AI", email = "hello@altpath.ai" },
]
keywords = [
    "teleology",
    "hedonic",
    "optimization",
    "purpose",
    "classification",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/altpath-ai/highnoon"
Repository = "https://github.com/altpath-ai/highnoon"
